[package]
name = "hyperflo"
version = "0.1.0"
authors = ["corysabol"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_deref = "1.1.0"
deno_core = "0.45.2"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["rt-core", "tcp"] }
web-view = { version = "0.6.2" }
notify = "5.0.0-pre.2"
